# NiflectSamplePropertyEditor

./: .gitmodules  README.md
.github/workflows/: Linux.yml  Windows.yml
Doc/English/: README.md
Project/PropertyEditor/: CMakeLists.txt
Source/PropertyEditor/: a.txt  p拼接文件内容.bat
Source/PropertyEditor/include/: Example0.h  ExampleStructure.h
Source/PropertyEditor/include/Accessor/: CompoundAccessor.h  ContainerAccessor.h  ValueTypeAccessor.h
Source/PropertyEditor/include/Property/: PropertyNode.h
Source/PropertyEditor/include/Qt/Widget/: PropertyUiNode.h
Source/PropertyEditor/src/: Accessor.h  AccessorSetting.h  Example0.cpp  ExampleStructure.cpp  Main.cpp  PropertyEditorCommon.h  PropertyEditorSystem.cpp  PropertyEditorSystem.h
Source/PropertyEditor/src/Accessor/: ValueTypeAccessor.cpp
Source/PropertyEditor/src/Property/: PropertyEditContext.cpp  PropertyEditContext.h  PropertyNode.cpp
Source/PropertyEditor/src/Qt/Util/: CoreUtil.cpp  WidgetUtil.cpp  WidgetUtil.h
Source/PropertyEditor/src/Qt/Widget/: ExampleWindow.cpp  ExampleWindow.h  PropertyRow.cpp  PropertyRow.h  PropertyTree.cpp  PropertyTree.h  PropertyUiNode.cpp
